bugfix: dataTables tables should be fully responsive (row buttons are align to left in child row)

--- a/img/style.less
+++ b/img/style.less
@@ -2124,6 +2124,9 @@ table.lms-ui-datatable > tbody {
 table.dataTable>tbody>tr.child ul.dtr-details>li {
 	border-bottom: 0;
 	padding: 0;
+	&:last-child span.dtr-title {
+		display: none;
+	}
 }
 
 tr.space_row > td {
